2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm.src: Attribute support.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm.src: Use array reference syntax for
	|create_element_ns|, for Whatpm::NanoDOM compability.  Typo fixed.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm.src: Set |in_xml| flag for tokenizer.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Parser.pm.src: A bug on end tag handling fixed.

2008-10-14  Wakaba  <wakaba@suika.fam.cx>

	* Makefile, Parser.pm.src: New files.