@@ -1,7 +1,7 @@
 1..4935
 # Running under perl version 5.010000 for linux
-# Current time local: Tue Oct 14 18:24:20 2008
-# Current time GMT:   Tue Oct 14 09:24:20 2008
+# Current time local: Tue Oct 14 18:29:44 2008
+# Current time GMT:   Tue Oct 14 09:29:44 2008
 # Using Test.pm version 1.25
 # t/xml/cdata-1.dat
 ok 1
