@@ -1,5 +1,11 @@
 2008-10-14  Wakaba  <wakaba@suika.fam.cx>
 
+	* Parser.pm.src: In the "after root element" insertion mode, start
+	tag tokens are processed by changing the insertion mode to "before
+	root element" insertion mode after raising a parse error.
+
+2008-10-14  Wakaba  <wakaba@suika.fam.cx>
+
 	* Parser.pm.src: Attribute support.
 
 2008-10-14  Wakaba  <wakaba@suika.fam.cx>
